correct broken layouts with a focus on css grid

--- a/app/(main nav)/animation/page.module.scss
+++ b/app/(main nav)/animation/page.module.scss
@@ -62,7 +62,7 @@
 
 .videoWrapper {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(min(260px), 1fr));
   gap: 10px;
   max-width: 1024px;
   margin: auto;
@@ -98,4 +98,5 @@
 }
 .originalsMain {
   margin: 0;
+  padding: 0;
 }
