--- a/app/shop/page.module.scss
+++ b/app/shop/page.module.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   margin: auto;
-  max-width: 1296px;
+  max-width: 1024px;
 }
 .h1 {
   font-size: 2rem;
